fix: li word wrap style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -165,4 +165,6 @@ article ol {
 }
 article li {
     margin-bottom: 0.5rem;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
